# drawables

./: CMakeLists.txt  README.md  conanfile.txt  lockfile.json
.github/workflows/: ci.yml  create_tag_release.yml  update_lockfile.yml
src/: CMakeLists.txt  connection.h  drawable.cpp  drawable.h  id.h  library.cpp  library.h  parser.cpp  parser.h  texture_loader.h
src/drawables/: CMakeLists.txt  connection.h  drawable.cpp  drawable.h  library.cpp  library.h
src/parser/: CMakeLists.txt  enums.hpp  helpers.cpp  helpers.h  helpers.hpp  parser.cpp  parser.h  primitives.cpp  primitives.h  texture_loader.cpp
src/validator/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/assets_example/: CMakeLists.txt  TracksRC.xml  connection.cpp  connection.h  import_static.cpp  lego_part.h  lego_track.cpp  lego_track.h  library.cpp  library.h  parser_tracks.cpp  parser_tracks.h
tests/test_drawables/: mock_draw_list.hpp  test_drawable.cpp
tests/test_drawables_library/: mock_application.hpp  test_drawable.cpp  test_part.cpp
